# vc-playground

./: .gitignore  Cargo.toml  README.md  deny.toml  dfx.json
issuer/: Cargo.toml  build.sh  meta-issuer.did  meta_issuer.did
issuer/frontend/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts
issuer/frontend/e2e-tests/: test.ts
issuer/frontend/e2e-tests/utils/: sigin-in-user.utils.ts
issuer/frontend/src/: app.html  app.postcss
issuer/frontend/src/declarations/: index.d.ts  index.js  meta_issuer.did  meta_issuer.did.d.ts  meta_issuer.did.js
issuer/frontend/src/lib/api/: addGroup.api.ts  getGroup.api.ts  getUser.api.ts  joinGroup.api.ts  queryGroupTypes.api.ts  queryGroups.api.ts  setUser.api.ts  updateMembership.api.ts
issuer/frontend/src/lib/components/: AdminIssuerItem.svelte  AuthGuard.svelte  Dropdown.svelte  GithubIcon.svelte  GroupItem.svelte  GroupItemSkeleton.svelte  GroupsList.svelte  IconCopy.svelte  IssuerItem.svelte  IssuerItemSkeleton.svelte  IssuersList.svelte  MemberIssuerItem.svelte  MemberItem.svelte  MemberItemSkeleton.svelte  MembersList.svelte  SettingsDropdown.svelte
issuer/frontend/src/lib/constants/: credentials.ts  env-vars.ts  messages.ts  url-params.constants.ts
issuer/frontend/src/lib/modals/: CreateCredentialModal.svelte  MemberModal.svelte  PendingMemberModal.svelte  RequestVerifiedResidenceModal.svelte  registry.modals.ts
issuer/frontend/src/lib/services/: add-issuer-nickname.services.ts  add-user-nickname.services.ts  auth.services.ts  create-issuer.services.ts  get-or-create-user.services.ts  load-issuer-detail.services.ts  load-issuers.services.ts  login.services.ts  manage-membership.services.ts  request-credential.services.ts  request-membership.services.ts  set-theme.ts
issuer/frontend/src/lib/stores/: auth.store.ts  issuer-detail.store.ts  issuers.store.ts  issyer-types.store.ts  user.store.ts
issuer/frontend/src/lib/ui-components/elements/: ActionsWrapper.svelte  ArticleWrapper.svelte  AvatarSize.svelte  AvatarSkeleton.svelte  Badge.svelte  Box.svelte  Breadcrumb.svelte  Button.svelte  ButtonSkeleton.svelte  Callout.svelte  Footer.svelte  FooterActionsWrapper.svelte  Header.svelte  HeaderSubtitle.svelte  HeaderTitle.svelte  Heading.svelte  HeadingSkeleton.svelte  Hero.svelte  HeroCard.svelte  HeroTitle.svelte  HeroWrapper.svelte  Link.svelte  List.svelte  ListItem.svelte  MainWrapper.svelte  Modal.svelte  Paragraph.svelte  PopoverDropdown.svelte  Spinner.svelte  Stack.svelte  Tabs.svelte  TestIdWrapper.svelte  TwoSlots.svelte  WarningMessage.svelte
issuer/frontend/src/lib/ui-components/icons/: IconRight.svelte  Issuer.svelte  IssuerIcon.svelte  User.svelte  UserIcon.svelte  WarningIcon.svelte
issuer/frontend/src/lib/ui-components/page-layouts/: DefaultPage.svelte
issuer/frontend/src/lib/utils/: actor.utils.ts  canister-id.utils.ts  convert-to-arguments.utils.ts  count-approved-credentials.utils.ts  error-to-string.utils.ts  input-type-credential-spec.utils.ts  login-popup.utils.ts  to-nullable.utils.ts  vc-arguments-value.utils.ts
issuer/frontend/src/routes/: +layout.svelte
issuer/frontend/src/routes/(app)/: +layout.svelte
issuer/frontend/src/routes/(app)/home/: +page.svelte
issuer/frontend/src/routes/(landing-page)/: +page.svelte
issuer/frontend/static/.well-known/: ic-domains  ii-alternative-origins
issuer/src/: groups_api.rs  lib.rs  main.rs
issuer/tests/: dapp_management.rs  issue_credential.rs  issue_credentials.rs  manage_groups.rs
issuer/tests/util/: mod.rs
rp/: Cargo.toml  build.sh  rp.did
rp/frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
rp/frontend/src/: app.html
rp/frontend/src/declarations/meta_issuer/: index.js  meta_issuer.did  meta_issuer.did.d.ts  meta_issuer.did.js
rp/frontend/src/declarations/rp/: index.d.ts  index.js  rp.did  rp.did.d.ts  rp.did.js
rp/frontend/src/lib/api/: addExclusiveContent.api.ts  queryExclusiveContent.api.ts  queryGroupTypes.api.ts  queryGroups.api.ts  queryImages.api.ts  validateCredentials.api.ts
rp/frontend/src/lib/components/: AuthButton.svelte  Button.svelte  ChooseImageModal.svelte  CountriesSelect.svelte  Dropdown.svelte  Header.svelte  HeroCard.svelte  ImageItem.svelte  ImagesGrid.svelte  MainWrapper.svelte  Modal.svelte  NavBarItem.svelte  PublishIcon.svelte  TestIdWrapper.svelte  ViewExclusiveContentModal.svelte  ViewIcon.svelte  WarningMessage.svelte
rp/frontend/src/lib/constants/: credentials.ts  env-vars.ts  messages.ts
rp/frontend/src/lib/constants.ts/: env-vars.ts
rp/frontend/src/lib/services/: auth-client.services.ts  auth.services.ts  get-credential.services.ts  load-credential.services.ts  shareContent.services.ts
rp/frontend/src/lib/stores/: content-data-visible.store.ts  content-data.store.ts  credentials.store.ts  images.store.ts  issuer-types.store.ts  issuers.store.ts
rp/frontend/src/lib/utils/: actor.utils.ts  canister-id.utils.ts  create-content-credential-spec.utils.ts  credential-args-to-obj.utils.ts  credential-spec-predicate.utils.ts  date.utils.ts  equal-credentials.utils.ts  find-credential.utils.ts  input-type-credential-spec.utils.ts  login-popup.utils.ts  non-nullish.ts  validate-text.utils.ts
rp/frontend/src/routes/: +layout.svelte  +page.svelte
rp/frontend/src/routes/(app)/: +layout.svelte
rp/frontend/src/routes/(landing)/: +page.svelte
rp/frontend/src/routes/share/: +page.svelte
rp/frontend/static/.well-known/: ic-domains  ii-alternative-origins
rp/src/: lib.rs  main.rs  rp_api.rs
rp/tests/: dapp_management.rs  manage_content.rs
rp/tests/util/: mod.rs
(+26 files in other folders)
