[workspace]
members = [
    "issuer",
    "rp",
]
resolver = "2"


[workspace.dependencies]
asset_util = { git="https://github.com/dfinity/internet-identity", rev="abdb167c903b7ce9e1193185f3bf70ee122cebf8" }
canister_sig_util = { git="https://github.com/dfinity/internet-identity", rev="abdb167c903b7ce9e1193185f3bf70ee122cebf8" }
internet_identity_interface = { git="https://github.com/dfinity/internet-identity", rev="abdb167c903b7ce9e1193185f3bf70ee122cebf8" }
vc_util = { git="https://github.com/dfinity/internet-identity", rev="abdb167c903b7ce9e1193185f3bf70ee122cebf8" }
canister_tests = { git="https://github.com/dfinity/internet-identity", rev="abdb167c903b7ce9e1193185f3bf70ee122cebf8" }
