[workspace]
members = [
    "issuer",
    "rp",
]
resolver = "2"


[workspace.dependencies]
asset_util = { git="https://github.com/dfinity/internet-identity", rev="ba982be1f627af53a9f411e5bd68fc3f5005adef" }
internet_identity_interface = { git="https://github.com/dfinity/internet-identity", rev="ba982be1f627af53a9f411e5bd68fc3f5005adef" }
canister_tests = { git="https://github.com/dfinity/internet-identity", rev="ba982be1f627af53a9f411e5bd68fc3f5005adef" }
ic-verifiable-credentials = "1.0.1"
ic-canister-sig-creation = "1.1.0"
