[package]
name = "meta_issuer"
description = "Meta-Issuer for VC playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# IC/II dependencies
asset_util.workspace = true
internet_identity_interface.workspace = true
ic-verifiable-credentials.workspace = true
ic-canister-sig-creation.workspace = true
# unfortunately, there is a transitive dependency on getrandom which does _not_ compile to wasm unless we add this hacky workaround
ic-crypto-getrandom-for-wasm = { git="https://github.com/dfinity/ic", rev="faacac31032a9b98020475eb608fd63455603556" }
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-certification = "2.2"
ic-stable-structures = "0.6"

# other dependencies
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "^0.10" # set bound to match ic-certified-map bound
lazy_static = "1.4"
include_dir = "0.7"

[dev-dependencies]
assert_matches = "1.5.0"
candid_parser = "0.1"
ic-http-certification = "2.2"
ic-test-state-machine-client = "3"
ic-response-verification = "2.2"
relying_party = {path="../rp/"}
canister_tests.workspace = true
